Fixed bug in adding bottles and changed z-index of buttons

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,6 +14,7 @@ body {
   background-image: url('https://images.freecreatives.com/wp-content/uploads/2016/02/Light-Parchment-Texture.jpg');
 }
 
+
 /*NAV BAR*/
 
 #custom-nav, #footer-color {
@@ -97,11 +98,16 @@ body {
   border: 3px solid maroon;
 }
 
-#bottle-container {
+#bottle-container, #red-container, #white-container {
   margin-bottom: 5em;
 }
 
-/*RESET THUMB OPTION*/
+/*REDS AND WHITES*/
+
+#arrow {
+  z-index: 0;
+}
+
 #option {
   display: none;
 }
